2006-08-10  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (_onreturn::~onreturn): Don't attempt to close a NULL
	handle.

2006-08-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::lock): Handle
	ERROR_NOT_LOCKED returned from UnlockFileEx.

2006-07-23  Christopher Faylor  <cgf@timesys.com>

	* include/cygwin/version.h: Bump DLL minor version number to 22.

2006-07-19  Corinna Vinschen  <corinna@vinschen.de>

	* pinfo.cc (commune_process): Don't add extra \0 to cmdline.
	(_pinfo::cmdline): Ditto process internal.

2006-07-19  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (msync): Disable rounding up len.  Fix bug in access check
	loop.

2006-07-19  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_worker): Return EEXIST if newpath exists.

2006-07-18  Christopher Faylor  <cgf@timesys.com>

	* tty.cc (tty_list::terminate): Don't enter the busy loop if we don't
	own the master.

2006-07-18  Silvio Laguzzi  <slaguzzi@data-al.de>

	* sec_acl.cc (acltotext32): Add missing handling of default ACL entry
	types.

2006-07-18  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_dev_floppy::ioctl): Fix typo in lint
	directive.

2006-07-17  Christopher Faylor  <cgf@timesys.com>

	GCC 4.1 fixes.
	* cygheap.h (cygheap_user): Remove unneeded class names from function
	declaration.
	* fhandler.h (fhandler_base): Ditto.
	(fhandler_dev_floppy): Ditto.
	(fhandler_console): Ditto.
	* wininfo.h (wininfo): Ditto.
	* exceptions.cc (sigpacket::process): Avoid compiler errors about gotos
	and initialization.
	* fhandler_fifo.cc (fhandler_fifo::open): Ditto.
	* fhandler_floppy.cc (fhandler_dev_floppy::ioctl): Ditto.
	* fhandler_tty.cc (fhandler_tty_slave::ioctl): Ditto.
	* mmap.cc (mmap64): Ditto.
	* pipe.cc (fhandler_pipe::open): Ditto.
	* spawn.cc (spawn_guts): Ditto.

	* sec_helper.cc: Fix some comments.
	(get_null_sd): Move file-scope static to only function where it is
	used.
